--- a/app/templates/not-found.njk
+++ b/app/templates/not-found.njk
@@ -12,7 +12,7 @@
         href: "/"
       },
       {
-        text: "Apply for a large grant",
+        text: "Check if you can apply for a water resource management grant",
         href: "/"
       }
     ]
