--- a/app/templates/confirmation.njk
+++ b/app/templates/confirmation.njk
@@ -11,7 +11,7 @@
         href: "/"
       },
       {
-        text: "Apply for a large grant",
+        text: "Check if you can apply for a water resource management grant",
         href: "/"
       }
     ]
