--- a/app/templates/email.njk
+++ b/app/templates/email.njk
@@ -8,7 +8,7 @@
 {% block header %}
   {{ govukHeader({
     homepageUrl: "/",
-    serviceName: "Apply for a large grant",
+    serviceName: "Check if you can apply for a water resource management grant",
     serviceUrl: "/"
   }) }}
 {% endblock %}
