--- a/app/templates/progress-email.njk
+++ b/app/templates/progress-email.njk
@@ -7,7 +7,7 @@
 {% block header %}
   {{ govukHeader({
     homepageUrl: "/",
-    serviceName: "Apply for a large grant",
+    serviceName: "Check if you can apply for a water resource management grant",
     serviceUrl: "/"
   }) }}
 {% endblock %}
