--- a/app/templates/not-eligible.njk
+++ b/app/templates/not-eligible.njk
@@ -21,7 +21,7 @@
 {% block content %}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    <h1 class="govuk-heading-l">You cannot Check if you can apply for a water resource management grant</h1>
+    <h1 class="govuk-heading-l">You cannot apply for a grant from this scheme</h1>
     {% for s in sentences %}
       <p class="govuk-body">{{ s }}</p>
     {% endfor %}
