--- a/app/templates/legal-status.njk
+++ b/app/templates/legal-status.njk
@@ -23,7 +23,7 @@
 {% block content %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <form method="POST" action="/arable" novalidate>
+      <form method="POST" action="/legal-status" novalidate>
         {{ govukRadios(radios) }}
         {{ govukButton({
           text: "Continue"
