--- a/app/templates/project.njk
+++ b/app/templates/project.njk
@@ -36,7 +36,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
     <h1 class="govuk-heading-l">Project details</h1>
-      <form method="POST" action="/project" novalidate>
+      <form method="POST" action="/project-details" novalidate>
         {{ govukCheckboxes(checkboxes) }}
         {{ govukButton({
           text: "Continue"
