--- a/app/templates/answers.njk
+++ b/app/templates/answers.njk
@@ -10,7 +10,7 @@
     items: [
       {
         text: "Home",
-        href: "/"
+        href: "/irrigated-land"
       },
       {
         text: "Check if you can apply for a water resource management grant",
