--- a/app/templates/legal-status.njk
+++ b/app/templates/legal-status.njk
@@ -22,7 +22,7 @@
 
 {% block content %}
   <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
+    <div class="govuk-grid-column-full">
       <form method="POST" action="/legal-status" novalidate>
         {{ govukRadios(radios) }}
         {{ govukButton({
