--- a/app/templates/not-eligible.njk
+++ b/app/templates/not-eligible.njk
@@ -20,7 +20,7 @@
 
 {% block content %}
 <div class="govuk-grid-row">
-  <div class="govuk-grid-column-two-thirds">
+  <div class="govuk-grid-column-full">
     <h1 class="govuk-heading-l">You cannot apply for a grant from this scheme</h1>
     <p class="govuk-body">
     {{ messageContent | safe}}
