--- a/app/templates/project-start.njk
+++ b/app/templates/project-start.njk
@@ -4,6 +4,7 @@
 {% from "govuk/components/back-link/macro.njk" import govukBackLink %}
 {% from "govuk/components/header/macro.njk" import govukHeader %}
 {% from "govuk/components/radios/macro.njk" import govukRadios %}
+{% from "govuk/components/details/macro.njk" import govukDetails %}
 
 {% block header %}
   {{ govukHeader({
@@ -25,6 +26,20 @@
     <div class="govuk-grid-column-two-thirds">
       <form method="POST" action="/project-start" novalidate>
         {{ govukRadios(radios) }}
+
+        {{ govukDetails({
+            summaryText: "Help",
+            open: true,
+            html:
+            '<p>Starting the project or committing to any costs (such as placing orders) before you receive a funding agreement will invalidate your application.</p>
+            <p>Before you start the project, you can:</p>
+            <ul class="govuk-list govuk-list--bullet">
+                <li>get quotes from suppliers</li>
+                <li>apply for planning permission or an abstraction licence</li>
+            </ul>'
+           })
+        }}
+
         {{ govukButton({
           text: "Continue"
         }) }}
