--- a/app/templates/irrigated-land.njk
+++ b/app/templates/irrigated-land.njk
@@ -22,8 +22,8 @@
 
 {% block content %}
   <div class="govuk-grid-row">
-    <div class="govuk-grid-column-full">
-      <form method="POST" action="/irrigated-land" novalidate>
+    <div class="govuk-grid-column-two-thirds">
+      <form method="POST" action="/irrigated-land" novalidate="novalidate">
         {{ govukInput(currentInput) }}
         {{ govukInput(targetInput) }}
         {{ govukButton({
