--- a/app/templates/not-eligible.njk
+++ b/app/templates/not-eligible.njk
@@ -19,12 +19,12 @@
 {% endblock %}
 
 {% block content %}
-<div class="govuk-grid-row">
-  <div class="govuk-grid-column-full">
-    <h1 class="govuk-heading-l">You cannot apply for a grant from this scheme</h1>
-    <p class="govuk-body">
-    {{ messageContent | safe}}
-    </p>
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
+      <h1 class="govuk-heading-l">You cannot apply for a grant from this scheme</h1>
+      <p class="govuk-body">
+        {{ messageContent | safe}}
+      </p>
+    </div>
   </div>
-</div>
 {% endblock %}
