--- a/app/templates/productivity.njk
+++ b/app/templates/productivity.njk
@@ -20,7 +20,7 @@
     href: backLink
   }) }}
   {% if errorText %}
-  {{govukErrorSummary ({
+    {{govukErrorSummary ({
   "titleText": "There is a problem",
   "errorList": [
     {
@@ -29,13 +29,13 @@
     }
   ]
 }) }}
-{% endif %}
+  {% endif %}
 {% endblock %}
 
 {% block content %}
   <div class="govuk-grid-row">
-    <div class="govuk-grid-column-full">
-      <form method="POST" action="/productivity" novalidate>
+    <div class="govuk-grid-column-two-thirds">
+      <form method="POST" action="/productivity" novalidate="novalidate">
         {{ govukCheckboxes(checkboxes) }}
         {{ govukButton({
           text: "Continue"
