tenancy length page errors and test

--- a/app/templates/tenancy-length-condition.njk
+++ b/app/templates/tenancy-length-condition.njk
@@ -28,7 +28,7 @@
       </p>
       {{ govukButton({
           text: "Continue",
-          onclick: "window.location.href='http://localhost:3000/tenancy-length'"
+          href: "/project-items"
         }) }}
     </div>
   </div>
