--- a/app/templates/project-cost.njk
+++ b/app/templates/project-cost.njk
@@ -37,7 +37,7 @@
     <div class="govuk-grid-column-one-third">
       <h4 class="govuk-heading-m">Items selected</h4>
       <ul class="govuk-list govuk-list--bullet">
-        {% for item in projectItems %}
+        {% for item in projectItemsList %}
           <li>{{ item }}</li>
         {% endfor %}
       </ul>
