apply bold text to highlight values

--- a/app/templates/grant.njk
+++ b/app/templates/grant.njk
@@ -32,7 +32,7 @@
           <h1 class="govuk-fieldset__heading">Potential grant funding</h1>
         </legend>
         <label class="govuk-label">
-          You may be able to apply for a grant of up to £{{calculatedGrant}}, based on the estimated cost of £{{projectCost}}.
+          You may be able to apply for a grant of up to <span class="govuk-!-font-weight-bold">£{{calculatedGrant}},</span> based on the estimated cost of £{{projectCost}}.
         </label>
         {{ govukInsetText({
             text: "The project is not guaranteed to receive a grant."
