--- a/app/templates/project-items.njk
+++ b/app/templates/project-items.njk
@@ -26,7 +26,7 @@
     <div class="govuk-grid-column-full">
     <h1 class="govuk-heading-l">Which eligible items does your project need?</h1>
     <span id="project-items-hint" class="govuk-hint">
-      Grants can cover up to 40% of the eligible costs of a project. The minimum grant you can claim is £35,000 (40% of £87,500). The maximum grant is £1 million.
+      The minimum grant you can apply for is £35,000 (40% of £87,500).<br/>The maximum grant is £1 million.
     </span>
       <form method="POST" action="/project-items" novalidate>
         {{ govukCheckboxes(checkboxesInfrastucture) }}
