error hanlers project details page

--- a/app/templates/project-details.njk
+++ b/app/templates/project-details.njk
@@ -19,15 +19,10 @@
     text: "Back",
     href: backLink
   }) }}
-  {% if errorText %}
+  {% if errorList %}
     {{govukErrorSummary ({
   "titleText": "There is a problem",
-  "errorList": [
-    {
-      "text": errorText,
-      "href": "#project"
-    }
-  ]
+  "errorList": errorList
 }) }}
   {% endif %}
 {% endblock %}
