--- a/app/templates/farming-type.njk
+++ b/app/templates/farming-type.njk
@@ -23,7 +23,7 @@
 {% block content %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <form method="POST" action="/farming-type" novalidate>
+      <form method="POST" action="/water/farming-type" novalidate>
         {{ govukRadios(radios) }}
         {{ govukButton({
           text: "Continue"
