--- a/app/assets/src/layout.njk
+++ b/app/assets/src/layout.njk
@@ -3,6 +3,7 @@
 {% block pageTitle %}GOV.UK - Defra grants{% endblock %}
 
 {% block head %}
+<h1>THIS IS WATER</h1>
   <%= htmlWebpackPlugin.tags.headTags %>
 {% endblock %}
 
