--- a/app/templates/home.njk
+++ b/app/templates/home.njk
@@ -53,3 +53,14 @@
     </div>
   </div>
 {% endblock %}
+{% if googleTagManagerKey %}
+<script>
+window.dataLayer.push(
+    {
+        pageTitle: document.title,
+        pageCategory: 'Landing',
+        pagePath:  document.location.href,
+        event: 'Start'
+        });
+</script>
+{% endif %}
