--- a/app/templates/tag-manager/head-content.njk
+++ b/app/templates/tag-manager/head-content.njk
@@ -2,4 +2,7 @@
 <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id={{ googleTagManagerKey }}" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
+<!-- Data Layer -->
+<script>let dataLayer = [] </script>
+<!-- End Data Layer -->
 {% endif %}
