--- a/app/assets/src/layout.njk
+++ b/app/assets/src/layout.njk
@@ -2,6 +2,7 @@
 
 {% block pageTitle %}GOV.UK - Defra grants{% endblock %}
 {% block head %}
+  <meta name="robots" content="noindex">
   <%= htmlWebpackPlugin.tags.headTags %>
   {% if cookiesPolicy.analytics %}
     {% include "tag-manager/head-content.njk" %}
