edit form action page

--- a/app/templates/score.njk
+++ b/app/templates/score.njk
@@ -23,7 +23,7 @@
 {% block content %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <form method="POST" action="/collaboration" novalidate="novalidate">
+      <form method="POST" action="/score" novalidate="novalidate">
         {{ govukInput(inputScore) }}
         {{ govukButton({
           text: "Continue"
