--- a/app/templates/project-items.njk
+++ b/app/templates/project-items.njk
@@ -29,7 +29,7 @@
       The minimum grant you can apply for is £35,000 (40% of £87,500).<br/>The maximum grant is £1 million.
     </span>
       <form method="POST" action="/project-items" novalidate>
-        <input type="hidden" name="crumb" value={{crumb}} />
+        <input type="hidden" name="crumb" value="{{crumb}}" />
         {{ govukCheckboxes(checkboxesInfrastucture) }}
         {{ govukCheckboxes(checkboxesEquipment) }}
         {{ govukCheckboxes(checkboxesTechnology) }}
