--- a/app/templates/country.njk
+++ b/app/templates/country.njk
@@ -31,7 +31,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <form method="POST" action="/country" novalidate>
-        <input type="hidden" name="crumb" value={{crumb}} />
+        <input type="hidden" name="crumb" value="{{crumb}}" />
         {{ govukRadios(radios) }}
         {{ govukButton({
           text: "Continue"
