--- a/app/templates/irrigation-systems.njk
+++ b/app/templates/irrigation-systems.njk
@@ -31,7 +31,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <form method="POST" action="/irrigation-systems" novalidate="novalidate">
-        <input type="hidden" name="crumb" value={{crumb}} />
+        <input type="hidden" name="crumb" value="{{crumb}}" />
         {{ govukCheckboxes(irrigationCurrent) }}
         {{ govukCheckboxes(irrigationPlanned) }}
         {{ govukButton({
