--- a/app/templates/planning-permission.njk
+++ b/app/templates/planning-permission.njk
@@ -25,7 +25,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <form method="POST" action="/planning-permission" novalidate="novalidate">
-        <input type="hidden" name="crumb" value={{crumb}} />
+        <input type="hidden" name="crumb" value="{{crumb}}" />
         {{ govukRadios(radios) }}
 
         {{ govukDetails({
