--- a/app/templates/remaining-costs.njk
+++ b/app/templates/remaining-costs.njk
@@ -25,7 +25,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <form method="POST" action="/remaining-costs" novalidate="novalidate">
-        <input type="hidden" name="crumb" value={{crumb}} />
+        <input type="hidden" name="crumb" value="{{crumb}}" />
         {{ govukRadios(radios) }}
         {{ govukButton({
           text: "Continue"
