summary page design
summary page design for mock data

--- a/app/templates/500.njk
+++ b/app/templates/500.njk
@@ -7,6 +7,9 @@
         <div class="govuk-grid-column-two-thirds">
           <h1 class="govuk-heading-xl">Sorry, there is a problem with the service</h1>
           <p class="govuk-body">Try again later.</p>
+          <p>We have not saved your answers. When the service is available, you will have to start again.</p>
+          <p>Contact the RPA Helpline if you have any questions.</p>
+          <p>Telephone: 03000 200 301</p>
         </div>
       </div>
     </div>
