--- a/app/templates/cookies/cookie-banner.njk
+++ b/app/templates/cookies/cookie-banner.njk
@@ -2,10 +2,10 @@
 
 <noscript>
 {{ govukCookieBanner({
-  ariaLabel: "Cookies on Farming Transformation Fund",
+  ariaLabel: "Cookies on Water Resource Management Grant",
   messages: [
     {
-      headingText: "Cookies on Farming Transformation Fund",
+      headingText: "Cookies on Water Resource Management Grant",
       text: "We use cookies to make this service work and collect analytics information. To accept or reject cookies, turn on JavaScript in your browser settings or reload this page."
     }
   ]
@@ -29,11 +29,11 @@
   {% endset %}
 
   {{ govukCookieBanner({
-    ariaLabel: "Cookies on Farming Transformation Fund",
+    ariaLabel: "Cookies on Water Resource Management Grant",
     classes: "js-cookies-banner",
     messages: [
       {
-        headingText: "Cookies on Farming Transformation Fund",
+        headingText: "Cookies on Water Resource Management Grant",
         html: html,
         classes: "js-question-banner",
         actions: [
