--- a/app/templates/confirm.njk
+++ b/app/templates/confirm.njk
@@ -24,6 +24,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <form method="POST" action="/confirm" novalidate="novalidate">
+        <input type="hidden" name="crumb" value="{{crumb}}" />
         {{ govukInput(inputConfirm) }}
         {{ govukButton({
           text: "Continue"
