--- a/app/templates/project-items.njk
+++ b/app/templates/project-items.njk
@@ -5,6 +5,7 @@
 {% from "govuk/components/header/macro.njk" import govukHeader %}
 {% from "govuk/components/checkboxes/macro.njk" import govukCheckboxes %}
 {% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
+{% from "./components/macro.njk" import crumbToken %}
 
 {% block header %}
   {{ govukHeader({
@@ -29,7 +30,7 @@
       The minimum grant you can apply for is £35,000 (40% of £87,500).<br/>The maximum grant is £1 million.
     </span>
       <form method="POST" action="/project-items" novalidate>
-        <input type="hidden" name="crumb" value="{{crumb}}" />
+        {{ crumbToken(crumb)}}
         {{ govukCheckboxes(checkboxesInfrastucture) }}
         {{ govukCheckboxes(checkboxesEquipment) }}
         {{ govukCheckboxes(checkboxesTechnology) }}
