--- a/app/templates/save-progress.njk
+++ b/app/templates/save-progress.njk
@@ -4,6 +4,7 @@
 {% from "govuk/components/back-link/macro.njk" import govukBackLink %}
 {% from "govuk/components/header/macro.njk" import govukHeader %}
 {% from "govuk/components/radios/macro.njk" import govukRadios %}
+{% from "./components/macro.njk" import crumbToken %}
 
 {% block header %}
   {{ govukHeader({
@@ -24,6 +25,7 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <form method="POST" action={{ actionLink }} novalidate>
+      {{ crumbToken(crumb)}}
       {{ govukRadios(radios) }}
       {{ govukButton({
         text: "Continue"
