--- a/app/templates/model-farmer-agent-details.njk
+++ b/app/templates/model-farmer-agent-details.njk
@@ -5,6 +5,7 @@
 {% from "govuk/components/header/macro.njk" import govukHeader %}
 {% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
 {% from "govuk/components/input/macro.njk" import govukInput %}
+{% from "govuk/components/select/macro.njk" import govukSelect %}
 
 {% block header %}
   {{ govukHeader({
@@ -27,7 +28,7 @@
     <h1 class="govuk-heading-l">{{pageHeader}}</h1>
       <form method="POST" action="{{formActionPage}}" novalidate>
         <input type="hidden" name="crumb" value="{{crumb}}" />
-        {{ govukInput(inputTitle) }}
+        {{ govukSelect(selectTitle) }}
         {{ govukInput(inputFirstName) }}
         {{ govukInput(inputLastName) }}
         {{ govukButton({
