--- a/app/templates/business-details.njk
+++ b/app/templates/business-details.njk
@@ -5,6 +5,7 @@
 {% from "govuk/components/header/macro.njk" import govukHeader %}
 {% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
 {% from "govuk/components/input/macro.njk" import govukInput %}
+{% from "./components/macro.njk" import crumbToken %}
 
 {% block header %}
   {{ govukHeader({
@@ -26,7 +27,7 @@
     <div class="govuk-grid-column-full">
     <h1 class="govuk-heading-l">Project and business details</h1>
       <form method="POST" action="/business-details" novalidate>
-        <input type="hidden" name="crumb" value="{{crumb}}" />
+        {{ crumbToken(crumb)}}
         {{ govukInput(inputProjectName) }}
         {{ govukInput(inputBusinessName) }}
         {{ govukInput(inputNumberEmployees) }}
