Updated review comments

--- a/app/templates/answers.njk
+++ b/app/templates/answers.njk
@@ -91,7 +91,7 @@
       </td>
       <td class="govuk-table__cell">
         <div class="govuk-!-margin-9">
-        <p>{{question.fundingPriorities}}</p>
+        <p>{{question.fundingPriorities | safe}}</p>
         </div>
       </td>
       <td class="govuk-table__cell">
